--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/cal2.css" />
+    <link rel="stylesheet" href="cal2.css" />
     <title>Calculator</title>
   </head>
   <body>
@@ -45,6 +45,6 @@
       </div>
     </div>
 
-    <script src="js/cal2.js"></script>
+    <script src="cal2.js"></script>
   </body>
 </html>
